welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:50: error: expected class or object definition
faireA()       
^FlowerCase:52: error: Unmatched closing brace '}' ignored here
}
^