welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def faireA(){
	    def faireR(){
			setCouleurBrosse(Color.RED)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance()
		}
		faireR()
		avance();avance()
		def faireC(){
			setCouleurBrosse(Color.CYAN)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance()
		}
		faireC
		for(i<-1 to 6){recule()};droite();avance();avance();gauche();avance();avance()
		def faireO(){
			setCouleurBrosse(Color.ORANGE)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance()
		}
		faireO()
		recule();recule();recule();recule();droite();avance();avance();gauche()
		def faireP(){
			setCouleurBrosse(Color.PINK)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance()
		}
		faireP()
		avance();avance()
		def faireG(){
			setCouleurBrosse(Color.GREEN)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance()
		}
		faireG()
		
      }
}
faireA()      